promo thumb gap fixed

--- a/src/css/scss/partials/_main__page.scss
+++ b/src/css/scss/partials/_main__page.scss
@@ -233,7 +233,7 @@ body {
   .promo__thumbs__container {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 30px;
+    gap: 30px;
 
     .promo__thumbs-pic__container {
       overflow: hidden;
