--- a/src/css/webstudio.css
+++ b/src/css/webstudio.css
@@ -340,7 +340,7 @@ body {
   .promo .promo__thumbs__container {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 30px; }
+    gap: 30px; }
     .promo .promo__thumbs__container .promo__thumbs-pic__container {
       overflow: hidden; }
       .promo .promo__thumbs__container .promo__thumbs-pic__container .promo__thumbs-pic {
